--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.2.6",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "immer": "^1.7.2",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-beautiful-dnd": "^9.0.2",
