Added initial services part.

--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -34,10 +34,12 @@
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
     "classnames": "^2.2.6",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "immer": "^1.7.2",
+    "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-beautiful-dnd": "^9.0.2",
