--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "printWidth": 120
       }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-console": "off"
   }
 }
