--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -36,6 +36,7 @@
     "apollo-link-http": "^1.5.5",
     "apollo-link-state": "^0.4.2",
     "classnames": "^2.2.6",
+    "deepmerge": "^2.2.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "immer": "^1.7.2",
