--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -35,6 +35,7 @@
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-state": "^0.4.2",
+    "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
     "deepmerge": "^2.2.1",
     "graphql": "^14.0.2",
