add services list (#1)
* Fixed drag and drop on board.

* Added initial services part.

* Added match link to connect to different apollo service links.

* Added tasks example and show how concatenate multiple service links.

* Added example of a mutation for a specific service.

* Added wire cli to run dev server and deploy to wireline.

* Removed webpack zip

--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -6,27 +6,28 @@
   "repository": "git@github.com:wirelineio/datalab.git",
   "license": "UNLICENSED",
   "private": true,
-  "scripts": {
-    "lint": "eslint ./src",
-    "build": "webpack",
-    "start": "webpack-dev-server --watch",
-    "clean": "rm -rf dist"
-  },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "@wirelineio/cli": "^0.1.6",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
+    "url-loader": "1.0.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@wirelineio/sdk": "^0.1.6",
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "apollo-cache-inmemory": "^1.3.5",
@@ -34,14 +35,25 @@
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
+    "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
+    "deepmerge": "^2.2.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "immer": "^1.7.2",
+    "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "typeface-roboto": "^0.0.54"
+    "source-map-support": "^0.5.4"
+  },
+  "scripts": {
+    "build:server": "webpack",
+    "build:client": "webpack --config=webpack-client.config.js",
+    "build": "npm run build:server && npm run build:client",
+    "dev": "wire dev"
   }
 }
