Added gql service.

--- a/@datalab/backend/package.json
+++ b/@datalab/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datalab/hotmail",
+  "name": "@datalab/backend",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
