--- a/@datalab/google-mail/package.json
+++ b/@datalab/google-mail/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "repository": "https://github.com/wirelineio/service-template",
   "devDependencies": {
+    "@wirelineio/cli": "^0.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
