Add handler for router.

--- a/@datalab/app/service.yml
+++ b/@datalab/app/service.yml
@@ -13,6 +13,10 @@ functions:
           path: /
           method: get
           cors: true
+      - http:
+          path: /{route}
+          method: get
+          cors: true
   proxy:
     handler: handler.proxy
     description: Static assets proxy.
