--- a/services/google-mail/package.json
+++ b/services/google-mail/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datalab/hotmail",
+  "name": "dl-messaging-google-mail",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
