--- a/services/asana/package.json
+++ b/services/asana/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datalab/google-mail",
+  "name": "dl-tasks-asana",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
@@ -15,7 +15,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "webpack": "^4.17.1",
