--- a/services/google-mail/stack.yml
+++ b/services/google-mail/stack.yml
@@ -1,11 +1,11 @@
-name: hotmail-stack
+name: dl-messaging-google-mail-stack
 domain: tinchoz49
 stage: dev
 provider:
   name: aws
   region: us-east-1
 stack:
-  gql-hotmail:
+  gql:
     deployment:
-      image: 'wrn::hotmail-service'
+      image: 'wrn::dl-messaging-google-mail-service'
       version: 0.0.1
