--- a/services/hotmail/stack.yml
+++ b/services/hotmail/stack.yml
@@ -1,11 +1,11 @@
-name: asana-stack
+name: dl-messaging-hotmail-stack
 domain: tinchoz49
 stage: dev
 provider:
   name: aws
   region: us-east-1
 stack:
-  gql-asana:
+  gql:
     deployment:
-      image: 'wrn::asana-service'
+      image: 'wrn::dl-messaging-hotmail-service'
       version: 0.0.1
