Added KV store in the backend.

--- a/@datalab/app/stack.yml
+++ b/@datalab/app/stack.yml
@@ -13,3 +13,6 @@ stack:
     deployment:
       image: 'wrn::datalab-backend'
       version: 0.0.1
+  wireline.io/store:
+    reference:
+      endpointUrl: wrn::wireline.io/wireline/store
