--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -27,9 +27,9 @@
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
-    "@wirelineio/sdk": "^0.1.6",
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@wirelineio/sdk": "^0.1.6",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
@@ -53,7 +53,8 @@
   "scripts": {
     "build:server": "webpack",
     "build:client": "webpack --config=webpack-client.config.js",
-    "build": "PUBLIC_PATH=/dev npm run build:server && npm run build:client",
-    "dev": "wire dev"
+    "build": "npm run clean && PUBLIC_PATH=/dev NODE_ENV=production npm run build:server && npm run build:client",
+    "dev": "npm run clean && wire dev",
+    "clean": "rm -rf dist"
   }
 }
