--- a/@datalab/backend/package.json
+++ b/@datalab/backend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@wirelineio/sdk": "^0.1.4",
+    "@wirelineio/store-client": "^0.1.7",
     "graphql": "^14.0.2",
     "graphql-server-express": "^1.3.5",
     "graphql-tag": "^2.9.2",
@@ -31,7 +32,8 @@
     "source-map-support": "^0.5.4"
   },
   "scripts": {
-    "build": "webpack",
-    "dev": "wire dev --port 4000"
+    "build": "NODE_ENV=production webpack",
+    "dev": "npm run clean && wire dev --port 4000",
+    "clean": "rm -rf dist"
   }
 }
