Replaced domain tinchoz49 by example.com

--- a/@datalab/app/stack.yml
+++ b/@datalab/app/stack.yml
@@ -1,5 +1,5 @@
 name: datalab-stack
-domain: tinchoz49
+domain: example.com
 stage: dev
 provider:
   name: aws
@@ -16,3 +16,6 @@ stack:
   wireline.io/store:
     reference:
       endpointUrl: wrn::wireline.io/wireline/store
+  wireline.io/registry:
+    reference:
+      endpointUrl: wrn::wireline.io/wireline/registry
