--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# direnv
+.envrc
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
