--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -42,6 +42,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "immer": "^1.7.2",
+    "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
