--- a/@datalab/backend/wireline_local.yml
+++ b/@datalab/backend/wireline_local.yml
@@ -1,2 +1,5 @@
 services:
   'wireline.io/store': 'wrn::wireline.io/wireline/store'
+
+local_services:
+  'dl-orgs-contacts-service': 'http://localhost:4004'
