--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -39,6 +39,7 @@
     "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
     "deepmerge": "^2.2.1",
+    "formik": "^1.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "immer": "^1.7.2",
