--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -50,7 +50,9 @@
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "source-map-support": "^0.5.4"
+    "react-select": "^2.1.1",
+    "source-map-support": "^0.5.4",
+    "yup": "^0.26.6"
   },
   "scripts": {
     "build:server": "webpack",
