--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@tinymce/tinymce-react": "^2.4.0",
     "@wirelineio/sdk": "^0.1.6",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
@@ -47,6 +48,7 @@
     "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
+    "react-apollo-network-status": "^1.1.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
