Update eslint config. Add react version.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,11 @@
     "sourceType": "module"
   },
   "plugins": ["react", "prettier"],
+  "settings": {
+    "react": {
+      "version": "16"
+    }
+  },
   "rules": {
     "prettier/prettier": [
       "error",
