--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -29,7 +29,6 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
-    "@tinymce/tinymce-react": "^2.4.0",
     "@wirelineio/sdk": "^0.1.6",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
@@ -40,10 +39,13 @@
     "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
     "deepmerge": "^2.2.1",
+    "draft-js": "^0.10.5",
+    "draft-js-simpledecorator": "^1.0.2",
     "formik": "^1.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "immer": "^1.7.2",
+    "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
