--- a/services/alex/package.json
+++ b/services/alex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dl-spellcheck-dictionary",
+  "name": "dl-spellcheck-alex",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
@@ -24,13 +24,11 @@
   },
   "dependencies": {
     "@wirelineio/sdk": "^0.1.4",
-    "dictionary-en-gb": "^2.0.0",
+    "alex": "^6.0.0",
     "graphql": "^14.0.2",
     "graphql-server-express": "^1.3.5",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^2.24.0",
-    "retext": "^6.0.0",
-    "retext-spell": "^2.4.0",
     "source-map-support": "^0.5.4"
   },
   "scripts": {
