--- a/@datalab/app-mobile/package.json
+++ b/@datalab/app-mobile/package.json
@@ -13,12 +13,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@datalab/some-internal": "0.0.1",
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "get-yarn-workspaces": "^1.0.2"
+    "schedule": "0.3.0"
   }
 }
