rename: app-mobile -> native

--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -13,7 +13,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@datalab/some-internal": "0.0.1",
+    "@datalab/core": "0.0.1",
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
