--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -34,7 +34,7 @@
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
-    "apollo-link-http": "^1.5.5",
+    "apollo-link-http": "1.5.5",
     "apollo-link-state": "^0.4.2",
     "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
