--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "@wirelineio/cli": "^0.1.11",
+    "@wirelineio/cli": "^0.1.12",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.4",
@@ -29,7 +29,8 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
-    "@wirelineio/sdk": "^0.1.6",
+    "@wirelineio/sdk": "^0.1.12",
+    "@wirelineio/ux":"^0.1.12",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
