--- a/services/contacts/package.json
+++ b/services/contacts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dl-orgs-contacts",
+  "name": "contacts",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
