--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -30,7 +30,7 @@
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "@wirelineio/sdk": "^0.1.12",
-    "@wirelineio/ux":"^0.1.12",
+    "@wirelineio/ux": "^0.1.12",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
@@ -45,6 +45,7 @@
     "formik": "^1.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "hyperid": "^2.0.0",
     "immer": "^1.7.2",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
