Temporal fix for compute issues.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,8 @@
       "sourceMaps": true,
       "env": {
         "WRL_REGISTRY_URL": "https://api-dev.wireline.ninja/",
-        "WRL_COMPUTE_URL": "https://compute-dev.wireline.ninja/"
+        "WRL_COMPUTE_URL": "https://compute-dev.wireline.ninja/",
+        "WRL_SERVICES_WIRELINE.IO/STORE": "{ \"name\": \"wireline.io/store\", \"wrn\": \"wrn::dev.wireline.io/wireline/store\"}"
       }
     },
     {
