--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datalab/app-mobile",
+  "name": "@datalab/native",
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "description": "DataLab demo",
