--- a/services/datalab-contacts/package.json
+++ b/services/datalab-contacts/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@datalab/backend",
+  "name": "datalab-contacts",
   "version": "0.0.1",
   "description": "Wireline Test Service.",
   "license": "UNLICENSED",
   "private": true,
   "repository": "https://github.com/wirelineio/service-template",
   "devDependencies": {
-    "@wirelineio/cli": "^0.1.11",
+    "@wirelineio/cli": "^0.1.9",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.4",
@@ -15,7 +15,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "webpack": "^4.17.1",
@@ -24,17 +24,16 @@
   },
   "dependencies": {
     "@wirelineio/sdk": "^0.1.4",
-    "@wirelineio/store-client": "^0.1.7",
+    "@wirelineio/store-client": "^0.1.12",
     "graphql": "^14.0.2",
-    "graphql-request": "^1.8.2",
     "graphql-server-express": "^1.3.5",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "^4.0.2",
+    "graphql-tools": "^2.24.0",
+    "hyperid": "^2.0.0",
     "source-map-support": "^0.5.4"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "dev": "npm run clean && wire dev --port 3001",
-    "clean": "rm -rf dist"
+    "build": "webpack",
+    "dev": "wire dev"
   }
 }
