--- a/@datalab/app/.babelrc
+++ b/@datalab/app/.babelrc
@@ -1,7 +1,19 @@
 {
-  "presets": [["env", { "targets": { "node": "6.10.0" } }], "stage-0", "react"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "6.10.0"
+        },
+        "modules": "commonjs"
+      }
+    ],
+    "@babel/preset-react"
+  ],
   "plugins": [
     "add-module-exports",
-    "transform-runtime"
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
