--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "prestart": "rm ./node_modules/.cache/@babel -rf",
+    "prestart": "rm ./node_modules/.cache/@babel -rf || true",
     "start": "expo start --clear",
     "start:dev": "cross-env NODE_ENV=development npm start",
     "start:stg": "cross-env NODE_ENV=staging npm start",
