--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -31,6 +31,9 @@
     "@babel/plugin-transform-runtime":"^7.1.0",
     "babel-plugin-inline-dotenv": "^1.2.0",
     "babel-preset-expo": "^5.0.0",
+    "eslint-plugin-react-native": "^3.5.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-prettier": "^3.0.0",
     "cross-env": "^5.2.0",
     "expo-cli": "^2.4.0",
     "schedule": "0.3.0"
