--- a/@datalab/apollo-config/package.json
+++ b/@datalab/apollo-config/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@datalab/core",
+  "name": "@datalab/apollo-config",
   "version": "0.0.1",
-  "main": "./dist/datalab-core.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "webpack"
   },
@@ -9,11 +9,19 @@
     "dist"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.1.5"
+    "@babel/runtime": "^7.1.5",
+    "react-apollo-network-status": "^1.1.0",
+    "apollo-cache-inmemory": "^1.3.5",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.4",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "1.5.5",
+    "apollo-utilities": "^1.0.21",
+    "deepmerge": "^2.2.1",
+    "zen-observable": "^0.8.11"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
