--- a/@datalab/app/package.json
+++ b/@datalab/app/package.json
@@ -26,18 +26,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
-    "@datalab/core": "0.0.1",
+    "@datalab/apollo-config": "0.0.1",
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "@wirelineio/sdk": "^0.1.12",
     "@wirelineio/ux": "^0.1.12",
-    "apollo-cache-inmemory": "^1.3.5",
-    "apollo-client": "^2.4.2",
-    "apollo-link": "^1.2.3",
-    "apollo-link-error": "^1.1.1",
-    "apollo-link-http": "1.5.5",
-    "apollo-link-state": "^0.4.2",
-    "apollo-utilities": "^1.0.21",
     "classnames": "^2.2.6",
     "deepmerge": "^2.2.1",
     "draft-js": "^0.10.5",
@@ -52,7 +45,6 @@
     "lodash.merge": "^4.6.1",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
-    "react-apollo-network-status": "^1.1.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
