--- a/@datalab/backend/.babelrc
+++ b/@datalab/backend/.babelrc
@@ -1,16 +1,23 @@
 {
   "presets": [
-    ["env", {
-      "debug": false,
-      "targets": {
-        "node": "6.10"
-      }
-    }],
-
-    "stage-0"
+    [
+      "@babel/preset-env",
+       {
+         "debug": false,
+         "targets": {
+           "node": "6.10"
+         }
+       }
+    ]
   ],
   "plugins": [
     "babel-plugin-inline-import",
-    ["transform-runtime", {"polyfill": false}]
+    [
+      "transform-runtime",
+      "@babel/plugin-transform-runtime",
+      {
+        "polyfill": false
+      }
+    ]
   ]
 }
