Babel config. @datalab/apollo-config babel build config.

--- a/@datalab/apollo-config/package.json
+++ b/@datalab/apollo-config/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@datalab/apollo-config",
   "version": "0.0.1",
+  "license": "UNLICENSED",
+  "private": true,
   "main": "./dist/index.js",
   "scripts": {
     "build": "webpack"
