--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -7,8 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "prestart": "rm ./node_modules/.cache/@babel -rf || true",
-    "start": "expo start --clear",
+    "start": "expo start",
     "start:dev": "cross-env NODE_ENV=development npm start",
     "start:stg": "cross-env NODE_ENV=staging npm start",
     "start:prod": "cross-env NODE_ENV=production npm start",
