--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -28,6 +28,7 @@
     "react-navigation": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime":"^7.1.0",
     "babel-plugin-inline-dotenv": "^1.2.0",
     "babel-preset-expo": "^5.0.0",
     "cross-env": "^5.2.0",
