--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,9 @@
       "autoAttachChildProcesses": true,
       "sourceMaps": true,
       "env": {
-        "WRL_REGISTRY_URL": "https://api-dev.wireline.ninja/",
-        "WRL_COMPUTE_URL": "https://compute-dev.wireline.ninja/",
-        "WRL_SERVICES_WIRELINE.IO/STORE": "{ \"name\": \"wireline.io/store\", \"wrn\": \"wrn::dev.wireline.io/wireline/store\"}"
+        "WRL_REGISTRY_URL": "https://dev.wireline.ninja/svc/registry",
+        "WRL_COMPUTE_URL": "https://dev.wireline.ninja/svc/compute",
+        // "WRL_SERVICES_WIRELINE.IO/STORE": "{ \"name\": \"wireline.io/store\", \"wrn\": \"wrn::dev.wireline.io/wireline/store\"}"
       }
     },
     {
