--- a/@datalab/backend/package.json
+++ b/@datalab/backend/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.0.0",
     "@wirelineio/cli": "^0.1.14",
     "babel-loader": "^8.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-inline-import": "^3.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "webpack": "^4.17.1",
@@ -19,6 +20,7 @@
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "@wirelineio/sdk": "^0.1.4",
     "@wirelineio/store-client": "^0.1.7",
     "graphql": "^14.0.2",
