--- a/services/spellcheck/package.json
+++ b/services/spellcheck/package.json
@@ -20,6 +20,7 @@
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "@wirelineio/sdk": "^0.1.4",
     "dictionary-en-gb": "^2.0.0",
     "graphql": "^14.0.2",
