--- a/services/spellcheck/package.json
+++ b/services/spellcheck/package.json
@@ -6,23 +6,21 @@
   "private": true,
   "repository": "https://github.com/wirelineio/service-template",
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@wirelineio/cli": "^0.1.14",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "@wirelineio/sdk": "^0.1.4",
     "dictionary-en-gb": "^2.0.0",
     "graphql": "^14.0.2",
