--- a/@datalab/backend/package.json
+++ b/@datalab/backend/package.json
@@ -28,6 +28,7 @@
     "graphql-server-express": "^1.3.5",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.2",
+    "hyperid": "^2.0.1",
     "source-map-support": "^0.5.4"
   },
   "scripts": {
