--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -19,23 +19,28 @@
     "@babel/runtime": "^7.1.5",
     "@datalab/apollo-config": "0.0.1",
     "expo": "^31.0.2",
+    "formik": "^1.4.1",
     "graphql-tag": "^2.10.0",
     "native-base": "^2.8.1",
     "react": "16.5.0",
-    "react-dom": "16.5.0",
     "react-apollo": "^2.3.2-beta.0",
+    "react-dom": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-modal": "^7.0.2",
     "react-native-screens": "^1.0.0-alpha.16",
-    "react-navigation": "^3.0.0"
+    "react-navigation": "^3.0.0",
+    "styled-components": "^4.1.3",
+    "styled-tools": "^1.6.0",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime":"^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "babel-plugin-inline-dotenv": "^1.2.0",
     "babel-preset-expo": "^5.0.0",
-    "eslint-plugin-react-native": "^3.5.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-prettier": "^3.0.0",
     "cross-env": "^5.2.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "expo-cli": "^2.4.0",
     "schedule": "0.3.0"
   }
