--- a/@datalab/native/package.json
+++ b/@datalab/native/package.json
@@ -22,12 +22,14 @@
     "expo": "^32.0.0",
     "formik": "^1.4.1",
     "graphql-tag": "^2.10.0",
+    "lodash.debounce": "^4.0.8",
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-apollo": "^2.3.2-beta.0",
     "react-dom": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-modal": "^7.0.2",
+    "react-native-popover-view": "^1.0.16",
     "react-native-screens": "^1.0.0-alpha.16",
     "react-navigation": "^3.0.0",
     "styled-components": "^4.1.3",
