First working JIT-style Wallet auth.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
         "dev",
         "stack",
         "-d",
-        "--stack", "${workspaceFolder}/ops/fass/stack.yml",
+        "--stack", "${workspaceFolder}/ops/faas/stack.yml",
         "--services", "${workspaceFolder}",
-        "--endpoint", "https://dev.wireline.ninja/svc/registry" 
+        "--endpoint", "https://faas-tel.wireline.ninja/svc/registry" 
       ],
       "cwd": "${workspaceFolder}",
       "autoAttachChildProcesses": true,
