--- a/ops/faas/stack.yml
+++ b/ops/faas/stack.yml
@@ -1,5 +1,5 @@
 name: datalab-stack
-domain: example.com
+domain: tel.example.com
 stage: dev
 provider:
   name: openfaas
@@ -13,6 +13,8 @@ stack:
     deployment:
       image: 'wrn::datalab-backend'
       version: 0.0.1
+      environment:
+        WRL_ALLOW_DEMOCREDENTIALS: 0
   datalab-spellcheck:
     deployment:
       image: 'wrn::datalab-spellcheck'
