--- a/@datalab/backend/package.json
+++ b/@datalab/backend/package.json
@@ -29,6 +29,7 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.2",
     "hyperid": "^2.0.1",
+    "lodash": "^4.17.11",
     "source-map-support": "^0.5.4"
   },
   "scripts": {
