--- a/ops/faas/stack.yml
+++ b/ops/faas/stack.yml
@@ -13,6 +13,9 @@ stack:
     deployment:
       image: 'wrn::datalab-backend'
       version: 0.0.1
+      environment:
+        WRL_IDM_URL: https://dev.wireline.ninja/svc/idm
+        NODE_OPTIONS: '--inspect=0.0.0.0:9229'
   datalab-spellcheck:
     deployment:
       image: 'wrn::datalab-spellcheck'
